changed project source to manual

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     data-github-topic-filter (optional):
       - If set (e.g., "showcase"), only repos with that topic will be shown.
   -->
-  <body data-projects-source="both" data-gh-username="jeffhelzner" data-github-topic-filter="showcase">
+  <body data-projects-source="manual" data-gh-username="jeffhelzner" data-github-topic-filter="showcase">
     <a class="skip-link" href="#main">Skip to content</a>
 
     <header class="site-header">
