correct typo and small change to section header

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
       </section>
 
       <section id="explorations" class="section">
-        <h2>Explorations</h2>
-        <p>Here are some of the questions that i hope to explore here:</p>
+        <h2>Planned Explorations</h2>
+        <p>Here are some of the questions that I hope to explore here:</p>
         <ul>
           <li>What is a rational decision? How do I know if you've made one? How do I know if I've made one?</li>
           <li>What is a rational decision maker? Is a rational decision maker simply a decision maker who usually (always) makes rational decisions?</li>
